Funcional1/src/lf1/plp/functional1/parser/Functional1.jj
options
{
  //  LOOKAHEAD = 6;
  //  FORCE_LA_CHECK = true;
  JAVA_UNICODE_ESCAPE = true;
}

PARSER_BEGIN(Func1Parser)
package lf1.plp.functional1.parser;
import lf1.plp.functional1.*;
import lf1.plp.functional1.declaration.DecVariavel;
import lf1.plp.functional1.declaration.DeclaracaoFuncional;
import lf1.plp.functional1.declaration.DecFuncao;
import lf1.plp.functional1.declaration.DecComposta;
import lf1.plp.functional1.expression.ExpDeclaracao;
import lf1.plp.functional1.expression.IfThenElse;
import lf1.plp.functional1.expression.Aplicacao;
import java.util.*;
import lf1.plp.expressions2.expression.ExpSet;
import lf1.plp.expressions2.expression.ExpAnd;
import lf1.plp.expressions2.expression.ExpConcat;
import lf1.plp.expressions2.expression.ExpEquals;
import lf1.plp.expressions2.expression.ExpLength;
import lf1.plp.expressions2.expression.ExpMenos;
import lf1.plp.expressions2.expression.ExpNot;
import lf1.plp.expressions2.expression.ExpOr;
import lf1.plp.expressions2.expression.ExpSoma;
import lf1.plp.expressions2.expression.ExpSub;
import lf1.plp.expressions2.expression.ExpIn;
import lf1.plp.expressions2.expression.ExpUnion;
import lf1.plp.expressions2.expression.ExpUnionAll;
import lf1.plp.expressions2.expression.ExpInter;
import lf1.plp.expressions2.expression.ExpInterAll;
import lf1.plp.expressions2.expression.ExpMinusSet;
import lf1.plp.expressions2.expression.ExpSubset;
import lf1.plp.expressions2.expression.Expressao;
import lf1.plp.expressions2.expression.Id;
import lf1.plp.expressions2.expression.Valor;
import lf1.plp.expressions2.expression.ValorBooleano;
import lf1.plp.expressions2.expression.ValorInteiro;
import lf1.plp.expressions2.expression.ValorString;
import lf1.plp.expressions2.expression.ValorSet;

public class Func1Parser
{
  public static void main(String args [])
  {
    Func1Parser parser;
    if (args.length == 0)
    {
      System.out.println("Funcional 1 PLP Parser Version 0.0.1:  Reading from standard input . . .");
      parser = new Func1Parser(System.in);
    }
    else if (args.length == 1)
    {
      System.out.println("Funcional 1 PLP Parser Version 0.0.1:  Reading from file " + args [0] + " . . .");
      try
      {
        parser = new Func1Parser(new java.io.FileInputStream(args [0]));
      }
      catch (java.io.FileNotFoundException e)
      {
        System.out.println("Funcional 1 PLP Parser Version 0.0.1:  File " + args [0] + " not found.");
        return;
      }
    }
    else
    {
      System.out.println("Funcional 1 PLP Parser Version 0.0.1:  Usage is one of:");
      System.out.println("         java Func1Parser < inputfile");
      System.out.println("OR");
      System.out.println("         java Func1Parser inputfile");
      return;
    }
    Programa programa = null;
    try
    {
      programa = parser.Input();
      if (!programa.checaTipo())
 	  {
 	    System.out.println("Funcional 1 PLP Parser Version 0.0.1: Erro de tipo.");
      	System.exit(0);
      }
      System.out.println("Funcional 1 PLP Parser Version 0.0.1: Funcional1 program parsed successfully.");
    }
    catch (ParseException e)
    {
      e.printStackTrace();
      System.out.println("Funcional 1 PLP Parser Version 0.0.1: Encountered errors during parse.");
      System.exit(0);
    }
    try
    {
      System.out.println("Funcional 1 PLP Parser Version 0.0.1: running...");
      Valor val = programa.executar();
      if (val instanceof ValorString)
      {
        ValorString valStr = (ValorString) val;
        System.out.println("Funcional 1 PLP Parser Version 0.0.1: resultado=" + valStr.valor());
      }
      else if (val instanceof ValorInteiro)
      {
        ValorInteiro valInt = (ValorInteiro) val;
        System.out.println("Funcional 1 PLP Parser Version 0.0.1: resultado=" + valInt.valor());
      }
      else if (val instanceof ValorBooleano)
      {
        ValorBooleano valBool = (ValorBooleano) val;
        System.out.println("Funcional 1 PLP Parser Version 0.0.1: resultado=" + valBool.valor());
      }
      else if (val instanceof ValorSet)
      {
        ValorSet valSet = (ValorSet) val;
        System.out.println("Funcional 1 PLP Parser Version 0.0.1: resultado=" + valSet);
      }
    }
    catch (Exception e)
    {
      e.printStackTrace();
      System.out.println("Funcional 1 PLP Parser Version 0.0.1:  Encountered errors during execution.");
    }
  }
}

PARSER_END(Func1Parser)

SKIP : /* WHITE SPACE */
{
  " "
| "\t"
| "\n"
| "\r"
| "\f"
}

SPECIAL_TOKEN : /* COMMENTS */
{
  < SINGLE_LINE_COMMENT :
    "//" (~[ "\n", "\r" ])*
    (
      "\n"
    | "\r"
    | "\r\n"
    ) >
| < FORMAL_COMMENT :
    "/**" (~[ "*" ])* "*"
    (
      "*"
    |
      (
        ~[ "*", "/" ] (~[ "*" ])* "*"
      )
    )*
    "/" >
| < MULTI_LINE_COMMENT :
    "/*" (~[ "*" ])* "*"
    (
      "*"
    |
      (
        ~[ "*", "/" ] (~[ "*" ])* "*"
      )
    )*
    "/" >
}

TOKEN : /* TOKENS DE FUNCIONAL 1 */
{
  < AND : "and" >
| < OR : "or" >
| < NOT : "not" >
| < LENGTH : "length" >
| < TRUE : "true" >
| < FALSE : "false" >
| < LET : "let" >
| < VAR : "var" >
| < IN : "in" >
| < IF : "if" >
| < THEN : "then" >
| < ELSE : "else" >
| < FUNC : "fun" >
| < UNION : "union" >
| < INTER : "inter" >
| < MINUS_SET : "minus" >
| < SUBSET : "subset" >
| < UNIONALL : "unionAll" >
| < INTERALL : "interAll" >
}

TOKEN : /* LITERALS */
{
  < INTEGER_LITERAL :
    < DECIMAL_LITERAL > ([ "l", "L" ])?
  | < HEX_LITERAL > ([ "l", "L" ])?
  | < OCTAL_LITERAL > ([ "l", "L" ])? >
| < #DECIMAL_LITERAL : [ "1"-"9" ] ([ "0"-"9" ])* >
| < #HEX_LITERAL : "0" [ "x", "X" ] ([ "0"-"9", "a"-"f", "A"-"F" ])+ >
| < #OCTAL_LITERAL : "0" ([ "0"-"7" ])* >
| < STRING_LITERAL :
    "\""
    (
      (~[ "\"", "\\", "\n", "\r" ])
    |
      (
        "\\"
        (
          [ "n", "t", "b", "r", "f", "\\", "'", "\"" ]
        | [ "0"-"7" ] ([ "0"-"7" ])?
        | [ "0"-"3" ] [ "0"-"7" ] [ "0"-"7" ]
        )
      )
    )*
    "\"" >
}

TOKEN : /* IDENTIFIERS */
{
  < IDENTIFIER :
    < LETTER >
    (
      < LETTER >
    | < DIGIT >
    )* >
| < #LETTER : [ "\u0024", "\u0041"-"\u005a", "\u005f", "\u0061"-"\u007a", "\u00c0"-"\u00d6", "\u00d8"-"\u00f6", "\u00f8"-"\u00ff", "\u0100"-"\u1fff", "\u3040"-"\u318f", "\u3300"-"\u337f", "\u3400"-"\u3d2d", "\u4e00"-"\u9fff", "\uf900"-"\ufaff" ] >
| < #DIGIT : [ "\u0030"-"\u0039", "\u0660"-"\u0669", "\u06f0"-"\u06f9", "\u0966"-"\u096f", "\u09e6"-"\u09ef", "\u0a66"-"\u0a6f", "\u0ae6"-"\u0aef", "\u0b66"-"\u0b6f", "\u0be7"-"\u0bef", "\u0c66"-"\u0c6f", "\u0ce6"-"\u0cef", "\u0d66"-"\u0d6f", "\u0e50"-"\u0e59", "\u0ed0"-"\u0ed9", "\u1040"-"\u1049" ] >
}

TOKEN : /* SEPARATORS */
{
  < LPAREN : "(" >
| < RPAREN : ")" >
| < LBRACE : "{" >
| < RBRACE : "}" >
| < LBRACKET : "[" >
| < RBRACKET : "]" >
| < SEMICOLON : ";" >
| < COMMA : "," >
| < DOT : "." >
}

TOKEN : /* OPERATORS */
{
  < ASSIGN : "=" >
| < GT : ">" >
| < LT : "<" >
| < BANG : "!" >
| < TILDE : "~" >
| < HOOK : "?" >
| < COLON : ":" >
| < EQ : "==" >
| < LE : "<=" >
| < GE : ">=" >
| < NE : "!=" >
| < SC_OR : "||" >
| < SC_AND : "&&" >
| < CONCAT : "++" >
| < PLUS : "+" >
| < MINUS : "-" >
| < STAR : "*" >
| < SLASH : "/" >
| < BIT_AND : "&" >
| < BIT_OR : "|" >
| < XOR : "^" >
| < REM : "%" >
}

Programa Input() :
{
  Programa retorno;
}
{
  retorno = PPrograma() < EOF >
  {
    return retorno;
  }
}

Valor PValorInteiro() :
{
  Token token;
}
{
  token = < INTEGER_LITERAL >
  {
    //System.out.println("ValorInteiro=" + token.toString());
    return new ValorInteiro(Integer.parseInt(token.toString()));
  }
}

Valor PValorBooleano() :
{}
{
  < FALSE >
  {
    return new ValorBooleano(false);
  }
| < TRUE >
  {
    return new ValorBooleano(true);
  }
}

Valor PValorString() :
{
  Token token;
}
{
  token = < STRING_LITERAL >
  {
    //		System.out.println("ValorString=" + token.toString().length());
    String tokenStr = token.toString();
    tokenStr = tokenStr.substring(1, tokenStr.length() - 1);
    return new ValorString(tokenStr);
  }
}

Expressao PValorSet() :
{
  List<Expressao> valores = new ArrayList<Expressao>();
}
{
  < LBRACE >
  (
    valores = PListaExp()
  )?
  < RBRACE >
  {
    return new ExpSet(valores);
  }
}

Valor PValor() :
{
  Valor retorno;
}
{
  (
  retorno = PValorInteiro()
  | retorno = PValorBooleano()
  | retorno = PValorString()
  )
  {
    return retorno;
  }
}

Id PId() :
{
  Token token;
}
{
  token = < IDENTIFIER >
  {
    //System.out.println("Id=" + token.toString());
    //System.out.println("tam id=" + token.toString().length());
    String tokenStr = token.toString();
    //		tokenStr = tokenStr.substring(1,tokenStr.length()-1);
    return new Id(tokenStr);
  }
}

Expressao PExpMenos() :
{
  Expressao retorno;
}
{
  < MINUS > retorno = PExpPrimaria()
  {
    return new ExpMenos(retorno);
  }
}

Expressao PExpNot() :
{
  Expressao retorno;
}
{
  < NOT > retorno = PExpPrimaria()
  {
    return new ExpNot(retorno);
  }
}

Expressao PExpLength() :
{
  Expressao retorno;
}
{
  < LENGTH > retorno = PExpPrimaria()
  {
    if (retorno instanceof ValorString)
    {
      ValorString val = (ValorString) retorno;
      //		    System.out.println("Length val=" + val.valor());
    }
    //		System.out.println("1-" + retorno.toString());
    return new ExpLength(retorno);
  }
}

Expressao PExpPrimaria() :
{
  Expressao retorno;
}
{
  (
    retorno = PValor()
  | retorno = PValorSet()
  | retorno = PId()
  | < LPAREN > retorno = PExpressao() < RPAREN >
  )
  {
    //System.out.println("PExpPrimaria=" + retorno);
    return retorno;
  }
}

List PListaId() :
{
  List < Id > retorno = null;
  Id id;
}
{
  (
    id = PId()
    {
      if (retorno == null)
      {
        retorno = new ArrayList < Id > ();
        retorno.add(id);
      }
      else
      {
        retorno.add(id);
      }
    }
  )*
  {
    return retorno;
  }
}

List PListaExp() :
{
  List<Expressao> retorno = new ArrayList<Expressao>();
  Expressao exp;
}
{
  exp = PExpressao()
  {
    retorno.add(exp);
  }

  (
    < COMMA > exp = PExpressao()
    {
      retorno.add(exp);
    }
  )*

  {
    return retorno;
  }
}
DeclaracaoFuncional PDeclVar() :
{
  Id id;
  Expressao expressao;
  DeclaracaoFuncional retorno;
}
{
  (
    < VAR > id = PId() < ASSIGN > expressao = PExpressao()
  )
  {
    return new DecVariavel(id, expressao);
  }
}

DeclaracaoFuncional PDeclFuncao() :
{
  Id id;
  Expressao expressao;
  DeclaracaoFuncional retorno;
  List < Id > lista;
}
{
  (
    < FUNC > id = PId() lista = PListaId() < ASSIGN > expressao = PExpressao()
  )
  {
    return new DecFuncao(id, lista, expressao);
  }
}

DecComposta PDecComposta() :
{
	DeclaracaoFuncional d1;
	DeclaracaoFuncional d2;
}
{
  	(
  	  d1 = PDeclVar()
  	| d1 = PDeclFuncao()
  	)
	<COMMA> d2 = PDeclFuncional()
	{return new DecComposta(d1, d2);}
}

DeclaracaoFuncional PDeclFuncional() :
{
  DeclaracaoFuncional decl;
}
{
  (
    LOOKAHEAD(PDeclVar() < COMMA >)
    decl = PDecComposta()
  | LOOKAHEAD(PDeclFuncao() < COMMA >)
  	decl = PDecComposta()
  | decl = PDeclVar()
  | decl = PDeclFuncao()
  | < LPAREN > decl = PDeclFuncional() < RPAREN >
  )
  {
    return decl;
  }
}

Expressao PExpDeclaracao() :
{
  DeclaracaoFuncional declaracoes;
  Expressao expressao;
}
{
  < LET > declaracoes = PDeclFuncional() < IN > expressao = PExpressao()
  {
    return new ExpDeclaracao(declaracoes, expressao);
  }
}

Expressao PExpCondicional() :
{
  Expressao expCond, expThen, expElse;
}
{
  < IF > expCond = PExpressao() < THEN > expThen = PExpressao() < ELSE > expElse = PExpressao()
  {
    return new IfThenElse(expCond, expThen, expElse);
  }
}

Expressao PAplicacao() :
{
  List expressoes = null;
  Expressao expressao;
  Id id;
}
{
  (
    id = PId() < LPAREN > expressao = PExpressao()
    {
      expressoes = new ArrayList();
      expressoes.add(expressao);
    }
    (
      < COMMA > expressao = PExpressao()
      {
        expressoes.add(expressao);
      }
    )*
    < RPAREN >
  )
  {
    return new Aplicacao(id, expressoes);
  }
}

Expressao PExpUnionAll() :
{
  Expressao conjunto;
}
{
  < UNIONALL > conjunto = PExpPrimaria()
  {
    return new ExpUnionAll(conjunto);
  }
}

Expressao PExpInterAll() :
{
  Expressao conjunto;
}
{
  < INTERALL > conjunto = PExpPrimaria()
  {
    return new ExpInterAll(conjunto);
  }
}

Expressao PExpUnaria() :
{
  Expressao retorno;
}
{
  (
    LOOKAHEAD(PExpUnionAll())
    retorno = PExpUnionAll()

  | LOOKAHEAD(PExpInterAll())
    retorno = PExpInterAll()
    
  | LOOKAHEAD(PExpMenos())
    retorno = PExpMenos()

  | LOOKAHEAD(PExpNot())
    retorno = PExpNot()

  | LOOKAHEAD(PExpLength())
    retorno = PExpLength()

  | LOOKAHEAD(PExpDeclaracao())
    retorno = PExpDeclaracao()

  | LOOKAHEAD(PExpCondicional())
    retorno = PExpCondicional()

  | LOOKAHEAD(PId() < LPAREN >)
    retorno = PAplicacao()

  | LOOKAHEAD(PExpPrimaria())
    retorno = PExpPrimaria()
  )
  {
    return retorno;
  }
}

Expressao PExpBinaria() :
{
  Expressao retorno, param2;
}
{
  (
    retorno = PExpBinaria2()
    (
      < EQ > param2 = PExpBinaria2()
      {
        retorno = new ExpEquals(retorno, param2);
      }
    )*
  )
  {
    return retorno;
  }
}

Expressao PExpBinaria2() :
{
  Expressao retorno, param2;
}
{
  (
    retorno = PExpBinaria3()
    (
      < PLUS > param2 = PExpBinaria3()
      {
        retorno = new ExpSoma(retorno, param2);
      }
    | < MINUS > param2 = PExpBinaria3()
      {
        retorno = new ExpSub(retorno, param2);
      }
    | < OR > param2 = PExpBinaria3()
      {
        retorno = new ExpOr(retorno, param2);
      }
    | < CONCAT > param2 = PExpBinaria3()
      {
        retorno = new ExpConcat(retorno, param2);
      }
    | < UNION > param2 = PExpBinaria3()
      {
        retorno = new ExpUnion(retorno, param2);
      }
    | < INTER > param2 = PExpBinaria3()
      {
        retorno = new ExpInter(retorno, param2);
      }
    | < MINUS_SET > param2 = PExpBinaria3()
      {
        retorno = new ExpMinusSet(retorno, param2);
      }
    | < SUBSET > param2 = PExpBinaria3()
      {
        retorno = new ExpSubset(retorno, param2);
      }
    )*
  )
  {
    return retorno;
  }
}

Expressao PExpBinaria3() :
{
  Expressao retorno, param2;
}
{
  (
    retorno = PExpUnaria()
    (
      < AND > param2 = PExpUnaria()
      {
        retorno = new ExpAnd(retorno, param2);
      }
      | < IN > param2 = PExpUnaria()
        {
          retorno = new ExpIn(retorno, param2);
        }
    )*
  )
  {
    return retorno;
  }
}

Expressao PExpressao() :
{
  Expressao retorno;
}
{
  retorno = PExpBinaria()
  {
    return retorno;
  }
}

Programa PPrograma() :
{
  Expressao retorno;
}
{
  retorno = PExpressao()
  {
    //System.out.println("Expressao=" + retorno);
    return new Programa(retorno);
  }
}
